--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -105,7 +105,7 @@ body a {
 }
 
 .cart-item {
-    width: 20%;
+    width: 35%;
     float: left;
     margin-right: 5%;
 
@@ -116,7 +116,7 @@ body a {
 }
 
 .cart-item-info {
-    width: 75%;
+    width: 60%;
     float: left;
 
 }
@@ -168,7 +168,7 @@ body a {
     font-weight: 400;
 }
 
-.close1, .close2 {
+.cart-close {
     background: url('../images/close_1.png') no-repeat 0px 0px;
     cursor: pointer;
     width: 28px;
@@ -183,10 +183,6 @@ body a {
 }
 
 .cart-header {
-    position: relative;
-}
-
-.cart-header2 {
     position: relative;
 }
 
@@ -4369,7 +4365,7 @@ p.cart a {
         margin-top: 1em;
     }
 
-    .close1, .close2 {
+    .close {
         top: 31px;
     }
 
