--- a/frontend/templates/pages/home.html
+++ b/frontend/templates/pages/home.html
@@ -29,13 +29,14 @@
         <div class="container">
             <h3>{% component 'text.html' id='cards-title' %}</h3>
             <div class="specia-top">
-                <ul class="grid_2">
+                <!--<ul class="grid_2">
                     {% component 'card.html' id='card-a' %}
                     {% component 'card.html' id='card-b' %}
                     {% component 'card.html' id='card-c' %}
                     {% component 'card.html' id='card-d' %}
                     <div class="clearfix"></div>
-                </ul>
+                </ul>-->
+                {% component 'text.html' id='special' %}
             </div>
         </div>
     </div>
