--- a/frontend/templates/components/menu_button.html
+++ b/frontend/templates/components/menu_button.html
@@ -1,7 +1,7 @@
 {% load core.tags %}
 
 <li class="grid">
-    <a data-color="{% attribute 'Color' type='text' id='color' default='#AAA' %}"
+    <a data-color="{% attribute 'Color' type='color' id='color' default='#AAA' %}"
        href="{% attribute 'URL' type='text' id='url' default='#' %}">
         {% attribute 'Title' type='text' id='title' default='Button' %}
     </a>
