--- a/frontend/static/css/megamenu.css
+++ b/frontend/static/css/megamenu.css
@@ -229,7 +229,7 @@
     cursor: pointer;
     color: #555;
     border-bottom: solid 2px rgba(0, 0, 0, 0.1);
-    background: #f3f4f5;
+    background: #ba8da121;
 }
 
 .megamenu > li.showhide span.title {
