Brand verbose name fix

--- a/frontend/templates/pages/products.html
+++ b/frontend/templates/pages/products.html
@@ -151,7 +151,7 @@
                         </a>
                         <h4><a href="{{ product.get_absolute_url }}">{{ product.name }}</a></h4>
                         {% if product.brand %}
-                            <p>Бренд: {{ product.brand }}</p>
+                            <p>Производитель: {{ product.brand }}</p>
                         {% endif %}
                         <div class="grid_1">
                             <div class="item_add"><span class="item_price"><h6>{{ product.price }} руб.</h6></span></div>
