--- a/frontend/templates/pages/product.html
+++ b/frontend/templates/pages/product.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="desc1 span_3_of_2">
                     <h3>{{ product.name }}</h3>
-                    <span class="brand">Бренд: <a href="#">{{ product.brand }}</a></span>
+                    <span class="brand">Производитель: <a href="#">{{ product.brand }}</a></span>
                     <br>
                     <span class="code">Артикул: {{ product.vendor }}</span>
                     <div class="price">
