--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -744,6 +744,7 @@ input:focus {
     color: #5a5a5a;
     background: none;
     border: none;
+    border-radius: 10px;
     width: 85.33333%;
     line-height: 1.5em;
     position: relative;
