--- a/frontend/templates/pages/products.html
+++ b/frontend/templates/pages/products.html
@@ -157,10 +157,14 @@
                             <div class="item_add"><span class="item_price"><h6>{{ product.price }} руб.</h6></span></div>
                             <div class="item_add">
                                 <span class="item_price">
-                                    {% if product.pk in request.session.cart|default:'' %}
-                                        <a href="{% url 'cart_action' action='remove' data=product.pk %}">В корзине</a>
+                                    {% if product.quantity == 0 %}
+                                        <a href="#">Предзаказ</a>
                                     {% else %}
-                                        <a href="{% url 'cart_action' action='add' data=product.pk %}">В корзину</a>
+                                        {% if product.pk in request.session.products|default:'' %}
+                                            <a href="{% url 'cart_action' action='remove' data=product.pk %}">В корзине</a>
+                                        {% else %}
+                                            <a href="{% url 'cart_action' action='add' data=product.pk %}">В корзину</a>
+                                        {% endif %}
                                     {% endif %}
                                 </span>
                             </div>
