--- a/frontend/templates/core/base.html
+++ b/frontend/templates/core/base.html
@@ -10,7 +10,8 @@
         <title>SittingKnitting &ndash; {% block title %}{% endblock title %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="keywords" content="" />
+
+        {% include 'core/favicons.html' %}
 
         <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
         <link href="{% static 'css/jquery-ui.min.css' %}" rel='stylesheet' type='text/css' />
