--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -812,7 +812,8 @@ input:focus {
 
 .reg a {
     vertical-align: middle;
-    font-size: 0.85em;
+    /*font-size: 0.85em;*/
+    font-size: 1em;
     font-weight: 300;
     text-decoration: none;
     /*padding: 0 10px;*/
@@ -1377,7 +1378,6 @@ i.goog:hover {
 }
 
 .footer {
-    text-align: center;
     padding: 3em 0;
 }
 
@@ -3622,7 +3622,8 @@ p.cart a {
     }
 
     .reg a {
-        font-size: 0.75em;
+        /*font-size: 0.75em;*/
+        font-size: 0.8em;
     }
 
     .reg {
