--- a/frontend/templates/core/base.html
+++ b/frontend/templates/core/base.html
@@ -29,7 +29,7 @@
                         <ul>
                             <li><a href="#">Контакты</a></li>|
                             <li><a href="#">Доставка и оплата</a></li>|
-                            <li><a href="#">Время работы</a></li>
+                            <li><a href="" data-scroll-to=".footer">Время работы</a></li>
                         </ul>
                     </div>
                     <div class="top_left">
@@ -39,6 +39,8 @@
                 </div>
             </div>
         </div>
+
+        <a id="scroll2top" data-scroll-to=".top_bg"></a>
 
         {% include 'core/header.html' %}
 
