--- a/frontend/templates/core/footer.html
+++ b/frontend/templates/core/footer.html
@@ -53,7 +53,7 @@
 		</div>
         <div class="clearfix"></div>
         <p class="text-center">
-            Магазин <a href="https://sittingknitting.ru">SittingKnitting</a> © 2018
+            Магазин <a href="https://sittingknitting.ru" data-scroll-to=".top_bg">SittingKnitting</a> © 2018
             <span>|</span>
             Разработано <a href="http://jkdev.ru">JK Developers</a>
             <span>|</span>
