--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -188,10 +188,10 @@ body a {
 }
 
 input[type=submit].order {
-    background: #00405d;
+    background: #5c1e39;
     padding: 10px 20px;
     border: none;
-
+    border-radius: 10px;
     font-size: 1em;
     color: #fff;
     text-decoration: none;
@@ -254,9 +254,9 @@ input[type=submit].order:hover {
 }
 
 a.cpns {
-    background: #ff6978;
+    background: #5c1e39;
     color: #fff;
-
+    border-radius: 10px;
     padding: 10px;
     font-size: 0.8em;
     font-weight: 600;
