style fixes: buttons & colors

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -266,7 +266,7 @@ input[type=submit].order:hover {
 }
 
 a.cpns {
-    background: #ff6978;
+    background: #5c1e39;
     color: #fff;
 
     padding: 10px;
@@ -458,7 +458,7 @@ ul.qty li p {
 }
 
 .top_right ul li a:hover {
-    color: #ff6978;
+    color: #5c1e39;
     text-decoration: none;
 }
 
@@ -570,7 +570,6 @@ select.item_Size {
 #loginContainer a span {
     display: block;
     padding: 2px 14px;
-    border: 1px solid #555;
     border-radius: 6px;
     font-weight: 300;
 }
@@ -671,7 +670,7 @@ fieldset#body {
     font-family: 'Open Sans', sans-serif;
     width: auto;
     float: left;
-    background: #ff6978;
+    background: #5c1e39;
     color: #fff;
     font-size: 0.8725em;
     padding: 8px 20px;
@@ -682,6 +681,7 @@ fieldset#body {
     -webkit-transition: all .5s;
     -moz-transition: all .5s;
     -o-transition: all .5s;
+    border-radius: 10px;
 }
 
 #loginForm #login:hover {
@@ -738,14 +738,12 @@ input:focus {
 /*search*/
 .search {
     position: relative;
-    background: #ba8da121;
     border: 1px solid #D8D8D8;
     border-radius: 10px;
 }
 
 .search form {
     width: 100%;
-    background: #ba8da121;
     border-radius: 10px;
 }
 
@@ -1170,8 +1168,8 @@ ul.megamenu.skyblue {
 }
 
 .crt-btn a:hover {
-    background: #ff6978;
-    border: 1px solid #ff6978;
+    background: #5c1e39;
+    border: 1px solid #5c1e39;
 }
 
 .arriv-info1 {
@@ -1355,7 +1353,7 @@ i.goog:hover {
 }
 
 .stay form input[type="submit"] {
-    background: #0f0f0f;
+    background: #5c1e39;
     padding: 0.5em;
     color: #fff;
     font-size: 1em;
@@ -1590,11 +1588,11 @@ ul.grid_2 li {
 
 ul.grid_2 li:hover {
     background: #e9e9e9;
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 ul.grid_2 li h5:hover {
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 ul.grid_2 li {
@@ -1608,7 +1606,7 @@ ul.grid_2 li {
 }
 
 .arriv-info2 a h3:hover {
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 /* start women */
@@ -1627,7 +1625,7 @@ ul.grid_2 li {
 
 .w_nav1 a.active {
     text-transform: uppercase;
-    color: #ff6978;
+    color: #5c1e39;
     font-size: 1em;
     margin-bottom: 5px;
 }
@@ -1981,7 +1979,7 @@ ul.grid_2 li {
 
 /* checked state */
 .sky-form .radio input + i:after {
-    background-color: #ff6978;
+    background-color: #5c1e39;
 }
 
 .sky-form .checkbox input + i:after {
@@ -1991,7 +1989,7 @@ ul.grid_2 li {
 .sky-form .radio input:checked + i,
 .sky-form .checkbox input:checked + i,
 .sky-form .toggle input:checked + i {
-    border-color: #ff6978;
+    border-color: #5c1e39;
 }
 
 /* error state */
@@ -2197,7 +2195,7 @@ ul.grid_2 li {
 }
 
 .grid1_of_4 h4 a:hover {
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 .grid1_of_4 p {
@@ -2314,7 +2312,7 @@ span.text {
 }
 
 span.price-new {
-    color: #ff6978;
+    color: #5c1e39;
     margin-right: 15px;
     font-weight: 500;
     font-size: 1.3em;
@@ -2545,7 +2543,8 @@ p.product_descr {
 .button1 {
     font-family: 'Open Sans', sans-serif;
     border: none;
-    background: #ff6978;
+    border-radius: 10px;
+    background: #5c1e39;
     padding: 7px 15px;
     color: #FFF;
     font-size: 13px;
@@ -2637,7 +2636,8 @@ p.product_descr {
     display: inline-block;
     font-size: 1em;
     padding: 10px 34px;
-    background: #ff6978;
+    background: #5c1e39;
+    border-radius: 10px;
     color: #fff;
     text-transform: uppercase;
     -webkit-transition: all 0.3s ease-in-out;
@@ -2784,13 +2784,13 @@ label {
 }
 
 .registration_form input[required] {
-    border-color: #ff6978;
+    border-color: #5c1e39;
 }
 
 .errorlist {
     list-style-position: inside;
     padding-left: 10px;
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 .errorlist li {
@@ -2803,7 +2803,7 @@ label {
     color: #ffffff;
     text-transform: capitalize;
     display: inline-block;
-    background: #ff6978;
+    background: #5c1e39;
     padding: 10px 20px;
     transition: 0.5s ease;
     -moz-transition: 0.5s ease;
@@ -2811,6 +2811,7 @@ label {
     -webkit-transition: 0.5s ease;
     cursor: pointer;
     border: none;
+    border-radius: 10px;
     outline: none;
     font-size: 1em;
     margin-bottom: 5px;
@@ -2862,7 +2863,7 @@ label {
 }
 
 .shoping_bag h4 span {
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 .s_art {
@@ -3047,7 +3048,7 @@ ul.s_icons {
     padding: 10px 20px;
     font-size: 1.2em;
     color: #ffffff;
-    background: #ff6978;
+    background: #5c1e39;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -3064,7 +3065,7 @@ ul.s_icons {
 }
 
 h4.title {
-    color: #ff6978;
+    color: #5c1e39;
     margin-bottom: 0.5em;
     font-size: 1.6em;
     line-height: 1.2em;
@@ -3081,7 +3082,7 @@ p.cart {
 
 p.cart a {
     text-decoration: underline;
-    color: #ff6978;
+    color: #5c1e39;
 }
 
 .check-out {
@@ -3155,7 +3156,7 @@ p.cart a {
     display: inline-block;
     font-size: 1em;
     padding: 12px 25px;
-    background: #ff6978;
+    background: #5c1e39;
     color: #fff;
     text-transform: uppercase;
     -webkit-transition: all 0.3s ease-in-out;
